--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
 <body>
     <div class="main-container">
         <div class="cards">
-          <div class="card">
+          <div class="card" id="card">
             <div class="card__icon"><i class="fas fa-bolt"></i></div>
             <p class="card__exit"><i class="fas fa-times"></i></p>
             <h2 class="card__title" id="ct"></h2>
             <p class="card__apply">
-              <a onClick="window.location.reload()" class="card__link" href="#">New Excuse <i class="fas fa-arrow-right"></i></a>
-              
+              <a onClick="window.location.reload()" class="card__link" href="#">New Excuse <i class="fas fa-arrow-right"></i></a> 
             </p>
           </div>
+          <p class="card__apply"> 
+            <button class="button" id="download">Download<i class="fas fa-arrow-right"></i></button>
+          </p>
         </div>
     </div>
     
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
 <script src="app.js"></script>
 </html>
