added share option for mobile devices.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
           </div>
           <p class="card__apply"> 
             <button class="button" id="download">Download<i class="fas fa-arrow-right"></i></button>
+            <button class="button" id="share">Share me </button>
+            <p id="result"></p>
           </p>
         </div>
     </div>
